# LMS

./: .env.example  Procfile  README.md  application.py  config.py  pyproject.toml  requirements.txt  test.py  wsgi.py
app/: __init__.py  _init_.py  middleware.py  models.py
app/admin/: routes.py
app/auth/: _init_.py  routes.py
app/client_admin/: routes.py
app/employee/: routes.py
app/static/css/: dashboard.css  style.css
app/static/js/: dashboard.js  main.js
app/superadmin/: routes.py
app/templates/: base.html
app/templates/admin/: create_student.html  dashboard.html  students.html
app/templates/auth/: login.html
app/templates/super_admin/: client_details.html  clients.html  create_admin.html  create_client.html  dashboard.html  index.html
app/templates/superadmin/: clients.html  index.html
app/templates/tenant/: create_employee.html  create_user.html  dashboard.html
app/tenant/: routes.py
scripts/: seed_superadmin.py
