[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lms-app"
version = "0.1.0"
description = "Multi-tenant LMS application"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.3"
flask-sqlalchemy = "3.0.5"
flask-migrate = "4.0.5"
flask-login = "0.6.3"
psycopg2-binary = "2.9.7"
python-dotenv = "1.0.0"
gunicorn = "21.2.0"
python-slugify = "8.0.1"
werkzeug = "2.3.7"
pytz = "2023.3"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
